Fixed the event spacing for mobile view

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -6262,9 +6262,9 @@ b, strong {
   color: #58b1df; }
 
 /*------- Events --------*/
-#mobile-only #events section + section {
-  margin-top: 3em; }
-
+@media only screen and (max-width: 44.375em) {
+  #events section + section {
+    margin-top: 3em; } }
 #events h4 {
   color: #95be49;
   font-size: 1.125rem;
